--- a/public/css/car.css
+++ b/public/css/car.css
@@ -1,3 +1,10 @@
+.bg {
+    background-color: lightgray;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
 .content {
     width: 50%;
     margin: 0 auto;
@@ -24,5 +31,3 @@ button {
     width: 20%;
     text-decoration: none;
 }
-
-
