--- a/public/css/motor.css
+++ b/public/css/motor.css
@@ -1,3 +1,10 @@
+.bg {
+    background-color: lightgray;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
 .content {
     width: 50%;
     margin: 0 auto;
