--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -16,6 +16,7 @@ h2 {
     border: 2px solid rgb(54, 54, 97);;
     width: 50%;
     margin: 0 auto;
+    margin-top: 5%;
     padding: 20px;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
