--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,6 +1,8 @@
 .bg {
     background-color: lightsteelblue;
-    height: fit-content;
+    height: 100vh;
+    margin-top: -10px;
+    padding-top: 20px;
 }
 
 .content {
@@ -10,7 +12,7 @@
     text-align: center;
 }
 
-h2 {
+.title {
     background-color: lightsteelblue;
     color: rgb(54, 54, 97);
     border: 2px solid rgb(54, 54, 97);;
@@ -61,5 +63,5 @@ button {
 .weather-card{
     margin: 0 auto;
     padding: 10px;
-    width: 53%;
+    width: 39%;
 }
