--- a/public/css/customer.css
+++ b/public/css/customer.css
@@ -1,3 +1,17 @@
 .card-header {
-    border: 1px solid blue;
+    border: 2px solid rgb(54, 54, 97);
+    width: 100%;
+    text-align: center;
+}
+
+.card-body {
+    background-color: rgb(54, 54, 97);
+    color: white;
+    text-align: center;
+}
+
+button {
+    padding: 3px;
+    width: 20%;
+    text-decoration: none;
 }
